syntax = "proto3";

package todo.v1;

import "todo_api/todo/v1/task.proto";

service Todo {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc FetchTask (FetchTaskRequest) returns (FetchTaskResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
}

message CreateTaskRequest {
  string title = 1;
  optional string description = 3;
}
message CreateTaskResponse {
  Task task = 1;
}

message UpdateTaskRequest {
  uint32 id = 1;
  optional string title = 2;
  optional bool completed = 3;
  optional string description = 4;
}

message UpdateTaskResponse {
  Task task = 1;
}

enum FilterField {
  FILTERFIELD_UNSPECIFIED = 0; // If unspecified filter by both fields
  FILTERFIELD_TITLE = 1;
  FILTERFIELD_DESCRIPTION = 2;
}

message TaskFilter {
  FilterField filter_field = 1;
  string pattern = 2;
}

// If no Id nor TaskFilter specified fetch all tasks
message FetchTaskRequest {
  optional uint32 id = 1;
  optional TaskFilter filter = 2;
}

message FetchTaskResponse {
  Tasks tasks = 1;
}

message DeleteTaskRequest {
  uint32 id = 1;
}

message DeleteTaskResponse {
  Task task = 1;
}
